@@ -2,6 +2,8 @@ package forge.game.keyword;
 
 import java.util.*;
 
+import org.apache.commons.lang3.StringUtils;
+
 import forge.StaticData;
 import forge.game.card.Card;
 import forge.item.PaperCard;
@@ -17,6 +19,7 @@ public enum Keyword {
     AMPLIFY(KeywordWithAmountAndType.class, false, "As this creature enters the battlefield, put {%d:+1/+1 counter} on it for each %s card you reveal in your hand."),
     ANNIHILATOR(KeywordWithAmount.class, false, "Whenever this creature attacks, defending player sacrifices {%d:permanent}."),
     ASCEND(SimpleKeyword.class, true, "If you control ten or more permanents, you get the city's blessing for the rest of the game."),
+    ASSIST(SimpleKeyword.class, true, "Another player can pay up to %s of this spell's cost."),
     AURA_SWAP(KeywordWithCost.class, false, "%s: You may exchange this Aura with an Aura card in your hand."),
     AWAKEN(KeywordWithCostAndAmount.class, false, "If you cast this spell for %s, also put {%d:+1/+1 counter} on target land you control and it becomes a 0/0 Elemental creature with haste. It's still a land."),
     BANDING(SimpleKeyword.class, true, "Any creatures with banding, and up to one without, can attack in a band. Bands are blocked as a group. If any creatures with banding you control are blocking or being blocked by a creature, you divide that creature's combat damage, not its controller, among any of the creatures it's being blocked by or is blocking."),
@@ -80,15 +83,17 @@ public enum Keyword {
     IMPROVISE(SimpleKeyword.class, true, "Your artifacts can help cast this spell. Each artifact you tap after you're done activating mana abilities pays for {1}."),
     INDESTRUCTIBLE(SimpleKeyword.class, true, "Effects that say \"destroy\" don’t destroy this."),
     INFECT(SimpleKeyword.class, true, "This creature deals damage to creatures in the form of -1/-1 counters and to players in the form of poison counters."),
-    INGEST(SimpleKeyword.class, false, "Whenever this creature deals combat damage to a player, that player exiles the top card of his or her library."),
+    INGEST(SimpleKeyword.class, false, "Whenever this creature deals combat damage to a player, that player exiles the top card of their library."),
     INTIMIDATE(SimpleKeyword.class, true, "This creature can't be blocked except by artifact creatures and/or creatures that share a color with it."),
     KICKER(Kicker.class, false, "You may pay an additional %s as you cast this spell."),
+    JUMP_START(SimpleKeyword.class, false, "You may cast this card from your graveyard by discarding a card in addition to paying its other costs. Then exile this card."),
     LANDWALK(KeywordWithType.class, false, "This creature is unblockable as long as defending player controls a %s."),
     LEVEL_UP(KeywordWithCost.class, false, "%s: Put a level counter on this. Level up only as a sorcery."),
     LIFELINK(SimpleKeyword.class, true, "Damage dealt by this creature also causes its controller to gain that much life."),
-    LIVING_WEAPON(SimpleKeyword.class, true, "When this Equipment enters the battlefield, create a 0/0 black Germ creature token, then attach this Equipment to it."),
+    LIVING_WEAPON(SimpleKeyword.class, true, "When this Equipment enters the battlefield, create a 0/0 black Germ creature token, then attach this to it."),
     MADNESS(KeywordWithCost.class, true, "If you discard this card, discard it into exile. When you do, cast it for %s  or put it into your graveyard."),
     MELEE(SimpleKeyword.class, false, "Whenever this creature attacks, it gets +1/+1 until end of turn for each opponent you attacked with a creature this combat."),
+    MENTOR(SimpleKeyword.class, false, "Whenever this creature attacks, put a +1/+1 counter on target attacking creature with lesser power."),
     MENACE(SimpleKeyword.class, true, "This creature can't be blocked except by two or more creatures."),
     MEGAMORPH(KeywordWithCost.class, false, "You may cast this card face down as a 2/2 creature for {3}. Turn it face up any time for its megamorph cost and put a +1/+1 counter on it."),
     MIRACLE(KeywordWithCost.class, false, "You may cast this card for its miracle cost when you draw it if it's the first card you drew this turn."),
@@ -96,11 +101,11 @@ public enum Keyword {
     MODULAR(Modular.class, false, "This creature enters the battlefield with {%d:+1/+1 counter} on it. When it dies, you may put its +1/+1 counters on target artifact creature."),
     MORPH(KeywordWithCost.class, false, "You may cast this card face down as a 2/2 creature for {3}. Turn it face up any time for its morph cost."),
     MULTIKICKER(KeywordWithCost.class, false, "You may pay an additional %s any number of times as you cast this spell."),
-    MYRIAD(SimpleKeyword.class, false, "Whenever this creature attacks, for each opponent other than defending player, you may create a token that's a copy of this creature that's tapped and attacking that player or a planeswalker he or she controls. If one or more tokens are created this way, exile the tokens at end of combat."),
-    NINJUTSU(KeywordWithCost.class, false, "%s, Return an unblocked attacker you control to hand: Put this card onto the battlefield from your hand tapped and attacking."),
+    MYRIAD(SimpleKeyword.class, false, "Whenever this creature attacks, for each opponent other than defending player, you may create a token that's a copy of this creature that's tapped and attacking that player or a planeswalker they control. Exile the tokens at end of combat."),
+    NINJUTSU(Ninjutsu.class, false, "%s, Return an unblocked attacker you control to hand: Put this card onto the battlefield from your %s tapped and attacking."),
     OUTLAST(KeywordWithCost.class, false, "%s, {T}: Put a +1/+1 counter on this creature. Outlast only as a sorcery."),
     OFFERING(KeywordWithType.class, false, "You may cast this card any time you could cast an instant by sacrificing a %1$s and paying the difference in mana costs between this and the sacrificed %1$s. Mana cost includes color."),
-    PARTNER(SimpleKeyword.class, true, "You can have two commanders if both have partner."),
+    PARTNER(Partner.class, true, "You can have two commanders if both have partner."),
     PERSIST(SimpleKeyword.class, true, "When this creature dies, if it had no -1/-1 counters on it, return it to the battlefield under its owner's control with a -1/-1 counter on it."),
     PHASING(SimpleKeyword.class, true, "This phases in or out before you untap during each of your untap steps. While it's phased out, it's treated as though it doesn't exist."),
     POISONOUS(KeywordWithAmount.class, false, "Whenever this creature deals combat damage to a player, that player gets {%d:poison counter}."),
@@ -108,7 +113,7 @@ public enum Keyword {
     PROTECTION(Protection.class, false, "This creature can't be blocked, targeted, dealt damage, or equipped/enchanted by %s."),
     PROVOKE(SimpleKeyword.class, false, "Whenever this creature attacks, you may have target creature defending player controls untap and block it if able."),
     PROWESS(SimpleKeyword.class, false, "Whenever you cast a noncreature spell, this creature gets +1/+1 until end of turn."),
-    PROWL(KeywordWithCost.class, false, "You may cast this card by paying %s rather than paying its mana cost if you dealt combat damage to a player this turn with a creature that shares any of this spell's creature types."),
+    PROWL(KeywordWithCost.class, false, "You may pay %s rather than pay this spell’s mana cost if a player was dealt combat damage this turn by a source that, at the time it dealt that damage, was under your control and had any of this spell’s creature types."),
     RAMPAGE(KeywordWithAmount.class, false, "Whenever this creature becomes blocked, it gets +%1$d/+%1$d until end of turn for each creature blocking it beyond the first."),
     REACH(SimpleKeyword.class, true, "This creature can block creatures with flying."),
     REBOUND(SimpleKeyword.class, true, "If you cast this spell from your hand, exile it as it resolves. At the beginning of your next upkeep, you may cast this card from exile without paying its mana cost."),
@@ -132,11 +137,11 @@ public enum Keyword {
     SURGE(KeywordWithCost.class, true, "You may cast this spell for its surge cost if you or a teammate has cast another spell this turn."),
     SUSPEND(Suspend.class, false, "Rather than cast this card from your hand, you may pay %s and exile it with {%d:time counter} on it. At the beginning of your upkeep, remove a time counter. When the last is removed, cast it without paying its mana cost."),
     TOTEM_ARMOR(SimpleKeyword.class, true, "If enchanted permanent would be destroyed, instead remove all damage marked on it and destroy this Aura."),
-    TRAMPLE(SimpleKeyword.class, true, "If this creature would assign enough damage to its blockers to destroy them, you may have it assign the rest of its damage to defending player or planeswalker."),
+    TRAMPLE(SimpleKeyword.class, true, "This creature can deal excess combat damage to the player or planeswalker it's attacking."),
     TRANSFIGURE(KeywordWithCost.class, false, "%s, Sacrifice this creature: Search your library for a creature card with the same converted mana cost as this creature and put that card onto the battlefield. Then shuffle your library. Transfigure only as a sorcery."),
     TRANSMUTE(KeywordWithCost.class, false, "%s, Discard this card: Search your library for a card with the same converted mana cost as this card, reveal it, and put it into your hand. Then shuffle your library. Transmute only as a sorcery."),
     TRIBUTE(KeywordWithAmount.class, false, "As this creature enters the battlefield, an opponent of your choice may put {%d:+1/+1 counter} on it."),
-    TYPECYCLING(KeywordWithCostAndType.class, false, "%s, Discard this card: Search your library for a %s card, reveal it, and put it into your hand. Then shuffle your library."),
+    TYPECYCLING(KeywordWithCostAndType.class, false, "%s, Discard this card: Search your library for a %s card, reveal it, put it into your hand, then shuffle your library."),
     UNDAUNTED(SimpleKeyword.class, false, "This spell costs {1} less to cast for each opponent."),
     UNDYING(SimpleKeyword.class, true, "When this creature dies, if it had no +1/+1 counters on it, return it to the battlefield under its owner's control with a +1/+1 counter on it."),
     UNEARTH(KeywordWithCost.class, false, "%s: Return this card from your graveyard to the battlefield. It gains haste. Exile it at the beginning of the next end step or if it would leave the battlefield. Unearth only as a sorcery."),
@@ -165,23 +170,37 @@ public enum Keyword {
     public static KeywordInterface getInstance(String k) {
         Keyword keyword = Keyword.UNDEFINED;
         String details = k;
-        String enumName = k.replace(' ', '_').toUpperCase();
-        for (Keyword kw : Keyword.values()) {
-            if (enumName.startsWith(kw.name())) {
-                keyword = kw;
-                int idx = kw.name().length() + 1;
-                if (idx < k.length()) {
-                    details = k.substring(idx);
+        // try to get real part
+        if (k.contains(":")) {
+            final String x[] = k.split(":", 2);
+            keyword = smartValueOf(x[0]);
+            details = x[1];
+        } else if (k.contains(" ")) {
+            // First strike
+            keyword = smartValueOf(k);
+            details = "";
+
+            // other keywords that contains other stuff like Enchant
+            if (keyword == Keyword.UNDEFINED) {
+                final String x[] = k.split(" ", 2);
+
+                final Keyword k2 = smartValueOf(x[0]);
+                // Keywords that needs to be undefined
+                if (k2 != Keyword.UNDEFINED) {
+                    keyword = k2;
+                    details = x[1];
                 }
-                else {
-                    details = "";
-                }
-                break;
             }
+        } else {
+            // Simple Keyword
+            keyword = smartValueOf(k);
+            details = "";
         }
+
         if (keyword == Keyword.UNDEFINED) {
             //check for special keywords that have a prefix before the keyword enum name
             int idx = k.indexOf(' ');
+            String enumName = k.replace(" ", "_").toUpperCase();
             String firstWord = idx == -1 ? enumName : enumName.substring(0, idx);
             if (firstWord.endsWith("WALK")) {
                 keyword = Keyword.LANDWALK;
@@ -202,7 +221,7 @@ public enum Keyword {
         }
         KeywordInstance<?> inst;
         try {
-            inst = keyword.type.newInstance();
+            inst = keyword.type.getConstructor().newInstance();
         }
         catch (Exception e) {
             inst = new UndefinedKeyword();
@@ -260,5 +279,16 @@ public enum Keyword {
             };
         }
         return null;
+    }
+
+    public static Keyword smartValueOf(String value) {
+        final String valToCompate = StringUtils.replaceChars(value, " -", "__").toUpperCase();
+        for (final Keyword v : Keyword.values()) {
+            if (valToCompate.equals(v.name())) {
+                return v;
+            }
+        }
+
+        return UNDEFINED;
     }
 }
